@@ -1,3 +1,11 @@
+2011-01-18  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclBasic.c:      Various mismatches between Tcl_Panic 
+	* generic/tclCompCmds.c:   format string and its arguments,
+	* generic/tclCompExpr.c:   discovered thanks to [Bug 3159920]
+	* generic/tclPreserve.c:   (Backported)
+	* generic/tclTest.c:
+
 2011-01-17  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc. BACKPORT.
